{
  "version": 4,
  "terraform_version": "1.15.1",
  "serial": 27,
  "lineage": "ffde6e6b-461a-a307-ac5d-a79077744ff4",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:859993703623:vpc/vpc-01de78c418d327196",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-04a32566e8adc7476",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-03eb97f0fd5614e6b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01de78c418d327196",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0283eae254fd869fe",
            "owner_id": "859993703623"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:859993703623:loadbalancer/app/alb-2026050607564889370000000a/a1df532a08b749a8",
            "arn_suffix": "app/alb-2026050607564889370000000a/a1df532a08b749a8",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-2026050607564889370000000a-1959622608.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:859993703623:loadbalancer/app/alb-2026050607564889370000000a/a1df532a08b749a8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-2026050607564889370000000a",
            "name_prefix": "alb-",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04612b26caf50f3aa"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01fc308962732490e"
              },
              {
                "subnet_id": "subnet-032ae660c663663c9"
              },
              {
                "subnet_id": "subnet-03d7c46ccad9107db"
              },
              {
                "subnet_id": "subnet-0d74af347cf41f208"
              },
              {
                "subnet_id": "subnet-0e6de5e5c2ea363ad"
              },
              {
                "subnet_id": "subnet-0fde7e4515d523907"
              }
            ],
            "subnets": [
              "subnet-01fc308962732490e",
              "subnet-032ae660c663663c9",
              "subnet-03d7c46ccad9107db",
              "subnet-0d74af347cf41f208",
              "subnet-0e6de5e5c2ea363ad",
              "subnet-0fde7e4515d523907"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "whats-your-status-alb",
              "Project": "whats-your-status"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "whats-your-status-alb",
              "Project": "whats-your-status"
            },
            "vpc_id": "vpc-01de78c418d327196",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:859993703623:listener/app/alb-2026050607564889370000000a/a1df532a08b749a8/1d8fba7e6249ad44",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:859993703623:targetgroup/api-20260506075640883200000005/5fef13b078c8b3db",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:859993703623:listener/app/alb-2026050607564889370000000a/a1df532a08b749a8/1d8fba7e6249ad44",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:859993703623:loadbalancer/app/alb-2026050607564889370000000a/a1df532a08b749a8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.api",
            "aws_security_group.alb",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:859993703623:targetgroup/api-20260506075640883200000005/5fef13b078c8b3db",
            "arn_suffix": "targetgroup/api-20260506075640883200000005/5fef13b078c8b3db",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:859993703623:targetgroup/api-20260506075640883200000005/5fef13b078c8b3db",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:859993703623:loadbalancer/app/alb-2026050607564889370000000a/a1df532a08b749a8"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "api-20260506075640883200000005",
            "name_prefix": "api-",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "prod",
              "Project": "whats-your-status"
            },
            "tags_all": {
              "Environment": "prod",
              "Project": "whats-your-status"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01de78c418d327196"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:859993703623:security-group/sg-04612b26caf50f3aa",
            "description": "HTTP from the internet to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04612b26caf50f3aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "whats-your-status-alb-20260506075643025400000006",
            "name_prefix": "whats-your-status-alb-",
            "owner_id": "859993703623",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "whats-your-status-alb",
              "Project": "whats-your-status"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "whats-your-status-alb",
              "Project": "whats-your-status"
            },
            "timeouts": null,
            "vpc_id": "vpc-01de78c418d327196"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:859993703623:security-group/sg-0b2e1a844ab3a7320",
            "description": "Fargate tasks (API + worker)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b2e1a844ab3a7320",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "API from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04612b26caf50f3aa"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "whats-your-status-ecs-20260506075648893500000009",
            "name_prefix": "whats-your-status-ecs-",
            "owner_id": "859993703623",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "whats-your-status-ecs",
              "Project": "whats-your-status"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "whats-your-status-ecs",
              "Project": "whats-your-status"
            },
            "timeouts": null,
            "vpc_id": "vpc-01de78c418d327196"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:859993703623:security-group/sg-0c75159c20ca55b4a",
            "description": "ElastiCache Redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c75159c20ca55b4a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis from ECS tasks",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b2e1a844ab3a7320"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "whats-your-status-redis-2026050607565390810000000b",
            "name_prefix": "whats-your-status-redis-",
            "owner_id": "859993703623",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "whats-your-status-redis",
              "Project": "whats-your-status"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "whats-your-status-redis",
              "Project": "whats-your-status"
            },
            "timeouts": null,
            "vpc_id": "vpc-01de78c418d327196"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_tasks",
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}